test_cases/pass/p08.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i, total
total=0
FOR (i=1, i <= 5, i=i+1)
START FOR
    total=total+i
END FOR
PRINT: total
END SCRIPT
