test_cases/fail/f10.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
FOR (i=0, i < 3, i=i+1)
START FOR
    PRINT: i
END REPEAT
END SCRIPT
